2013.02.xx:
	breaking: upload return value for scan and match
	breaking: get_all_playlist_ids always returns lists of ids; always_id_lists is gone

2013.01.05:
	compatibility update for playlist mutation
	various metadata compatibility updates

2012.11.09:
	bugfix: support for uploading uppercase filenames (Tom Graham)
	bugfix: fix typo in multidownload validation, and add test

2012.08.31:
	metadata compatibility updates (storeId, lastPlayed)
	fix uploading of unicode filenames without tags

2012.05.04:
	update allowed rating values to 1-5 (David Dooling)
	update metajamId to matchedId (David Dooling)
	fix broken expectation about disc/track numbering metadata

2012.04.03:
	change to the 3-clause BSD license
	add Kevin Kwok to AUTHORS
	
2012.04.01:
	improve code in example.py
	support uploading of all Google-supported formats: m4a, ogg, flac, wma, mp3. Non-mp3 are transcoded to 320kbs abr mp3 using ffmpeg
	introduce dependency on ffmpeg. for non-mp3 uploading, it needs to be in path and have the needed transcoders available
	get_playlists is now get_all_playlist_ids, and is faster
	add an exception CallFailure. Api functions raise it if the server says their request failed
	add suppress_failure (default False) option to Api.__init__()
	change_playlist now returns the changed playlistId (pid)
	change_song_metadata now returns a list of changed songIds (sids)
	create_playlist now returns the new pid
	delete_playlist now returns the deleted pid
	delete_songs now returns a list of deleted sids
	change_playlist now returns the pid of the playlist - which may differ from the one passed in
	add_songs_to_playlist now returns a list of (sid, new playlistEntryId aka eid) tuples of added songs
	remove_songs_from_playlist now returns a list of removed (sid, eid) pairs
	search dictionary is now flattened, without the "results" key. see documentation for example
	
2012.03.27:
	package for pip/pypi
	add AUTHORS file